--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
     <script type="text/javascript" src="node_modules/angular-route/angular-route.js"></script>
     <script src="public/app.js"></script>
+    <script src="public/controllers/cart.js"></script>
 
     <style>
         body {
