--- a/public/main.html
+++ b/public/main.html
@@ -1,24 +1,18 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-xs-7 col-md-8 col-sm-8 col-lg-8">
+    <div class="col-xs-7 col-md-8 col-sm-8 col-lg-6">
       <div class="panel panel-primary">
           <div class="panel-heading">
               <h3 class="panel-title">Equipos portátiles</h3>
           </div>
-          <div class="panel-body">
+          <div class="panel-body" ng-repeat="articulo in articulos">
               <div class="radio">
                   <label>
-                      <input type="radio" name="optradio">Portátil LENOVO Ideapad 100 Atom™ 11.6" Azul <a>{{499.000 |currency}}</a>
+                      {{articulo.nombre}}-{{ articulo.precio|currency}}
+                          <a class="btn btn-success" ng-click="addcar(articulo)"> <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                          </a>
                   </label>
-              </div>
-              <div class="radio">
-                  <label>
-                      <input type="radio" name="optradio">Portátil LENOVO Idea 110 Celeron 14" Negro <a>{{799.000|currency}}</a></label>
-              </div>
-              <div class="radio">
-                  <label>
-                      <input type="radio" name="optradio">Convertible 2 en 1 HP AB004 Celeron Azul <a>{{899.000|currency}}</a></label>
               </div>
           </div>
       </div>
@@ -41,59 +35,44 @@
               </div>
           </div>
       </div>
-      <div class="panel panel-primary">
-          <div class="panel-heading">
-              <h3 class="panel-title"></h3>
-          </div>
-          <div class="panel-body">
-              <div class="radio">
-                  <label>
-                      <input type="radio" name="optradio">Option 1</label>
-              </div>
-              <div class="radio">
-                  <label>
-                      <input type="radio" name="optradio">Option 1</label>
-              </div>
-              <div class="radio">
-                  <label>
-                      <input type="radio" name="optradio">Option 1</label>
-              </div>
-          </div>
-      </div>
-      <div class="panel panel-primary">
-          <div class="panel-heading">
-              <h3 class="panel-title">Panel title</h3>
-          </div>
-          <div class="panel-body">
-              <div class="radio">
-                  <label>
-                      <input type="radio" name="optradio">Option 1</label>
-              </div>
-              <div class="radio">
-                  <label>
-                      <input type="radio" name="optradio">Option 1</label>
-              </div>
-              <div class="radio">
-                  <label>
-                      <input type="radio" name="optradio">Option 1</label>
-              </div>
-          </div>
-      </div>
     </div>
 
-    <div class="col-xs-5 col-md-4 col-sm-4 col-lg-4" data-spy="affix" data-offset-top="20">
+    <div class="col-xs-8 col-md-6 col-sm-6 col-lg-5" data-spy="affix" data-offset-top="20">
       <div class="panel panel-primary">
           <div id="divTotal" class="panel-heading">
-              <h3 class="panel-title">Total</h3>
+              <h3 class="panel-title">Carrito</h3>
           </div>
-          <div class="panel-body">
-              <h2>Rs. 100</h2>
-          </div>
-      </div>
+            <table class="table table-striped">
+                  <thead>
+                      <tr>
+                          <th class="span1">Id</th>
+                          <th class="span1">Cantidad</th>
+                          <th class="span2">Precio</th>
+                          <th class="span2">Total</th>
+                          <th class="span1"></th>
+                      </tr>
+                  </thead>
+                  <tbody>
+                      <tr class="well" ng-repeat="compra in compras track by $index">
+                          <td>{{$index+1}}.</td>
+                          <td>
+                              <input type="text" ng-model="compra.cantidad" />
+                          </td>
+                          <td>{{compra.precio | currency}}</td>
+                          <td>{{compra.cantidad*compra.precio | currency}}</td>
+                          <td>
+                          <a ng-click="deletecompra(compra)" class="btn btn-danger">x<span class="glyphicons glyphicons-delete" aria-hidden="true"></span>
+                          </a></td>
+                      </tr>
 
-      <div class="text-center">
-          <a href="#/checkout" class="btn btn-danger">Checkout <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-          </a>
+
+                  </tbody>
+
+                </table>
+                  <div class="text-center">
+                      <a href="#!/cart" class="btn btn-danger" ng-click="CalcularTotal(total)"> Comprar <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+                      </a>
+                  </div>
       </div>
     </div>
   </div>
